--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "vue-collapsed": "^1.1.3",
         "vue-color-kit": "^1.0.6",
         "vue-cookies": "^1.8.1",
+        "vue-countup-v3": "^1.4.0",
         "vue-resizable": "^2.1.7",
         "vue-tel-input": "^8.1.1",
         "vue3-popper": "^1.5.0",
