--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "spatie/laravel-permission": "^6.1",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-sluggable": "^3.4",
+        "spatie/laravel-tags": "^4.5",
         "spatie/temporary-directory": "^2.1",
         "stevebauman/location": "^6.6",
         "tightenco/ziggy": "^1.0",
