--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "lodash-es": "^4.17.21",
         "moment": "^2.29.4",
         "pinia": "^2.0.20",
+        "qrcode.vue": "^3.4.1",
         "qs": "^6.11.1",
         "string-to-color": "^2.2.2",
         "uuid": "^9.0.0",
