--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "phlak/semver": "^4.0",
         "predis/predis": "^2.1",
         "propaganistas/laravel-phone": "^5.0",
+        "pusher/pusher-php-server": "^7.2",
         "sentry/sentry-laravel": "^3.2",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-json-api-paginate": "^1.13",
