--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
         "@vuepic/vue-datepicker": "^5.1.1",
         "firebase": "^10.0.0",
         "floating-vue": "^2.0.0-beta.24",
+        "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.2.2",
         "lodash-es": "^4.17.21",
         "moment": "^2.29.4",
         "pinia": "^2.0.20",
+        "pusher-js": "^8.4.0-rc2",
         "qrcode.vue": "^3.4.1",
         "qs": "^6.11.1",
         "string-to-color": "^2.2.2",
