refactor: imports and websockets

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "lorisleiva/laravel-actions": "^2.4",
         "maatwebsite/excel": "^3.1",
+        "masbug/flysystem-google-drive-ext": "^2.3",
         "matchish/laravel-scout-elasticsearch": "^7.2",
         "meilisearch/meilisearch-php": "^1.0",
         "monicahq/laravel-cloudflare": "^3.3",
@@ -122,10 +123,7 @@
             "dont-discover": [
                 "laravel/telescope"
             ]
-        },
-        "google/apiclient-services": [
-            "Drive"
-        ]
+        }
     },
     "config": {
         "optimize-autoloader": true,
