feat: LocationShowcase: Code 128

--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
         "@vue-hero-icons/solid": "^1.7.2",
         "@vueform/multiselect": "^2.6.2",
         "@vuepic/vue-datepicker": "^5.1.1",
+        "canvas": "^2.11.2",
         "firebase": "^10.0.0",
         "floating-vue": "^2.0.0-beta.24",
+        "jsbarcode": "^3.11.6",
         "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.2.2",
         "lodash-es": "^4.17.21",
