--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
         "@vueform/multiselect": "^2.6.2",
         "@vuepic/vue-datepicker": "^5.1.1",
         "canvas": "^2.11.2",
-        "firebase": "^10.0.0",
         "floating-vue": "^2.0.0-beta.24",
         "jsbarcode": "^3.11.6",
         "laravel-echo": "^1.15.3",
@@ -75,7 +74,6 @@
         "vue-resizable": "^2.1.7",
         "vue-tel-input": "^8.1.1",
         "vue3-popper": "^1.5.0",
-        "vuedraggable": "^4.1.0",
-        "vuefire": "^3.1.3"
+        "vuedraggable": "^4.1.0"
     }
 }
