--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,7 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
