--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "qs": "^6.11.1",
         "string-to-color": "^2.2.2",
         "uuid": "^9.0.0",
+        "v-calendar": "^3.0.3",
         "vue-collapsed": "^1.1.3",
         "vue-color-kit": "^1.0.6",
         "vue-cookies": "^1.8.1",
