--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@vue-hero-icons/solid": "^1.7.2",
         "@vueform/multiselect": "^2.6.2",
         "@vuepic/vue-datepicker": "^5.1.1",
+        "chart.js": "^4.4.1",
         "floating-vue": "^2.0.0-beta.24",
         "jsbarcode": "^3.11.6",
         "laravel-echo": "^1.15.3",
@@ -67,6 +68,7 @@
         "swiper": "^11.0.5",
         "uuid": "^9.0.0",
         "v-calendar": "^3.0.3",
+        "vue-chartjs": "^5.3.0",
         "vue-collapsed": "^1.1.3",
         "vue-color-kit": "^1.0.6",
         "vue-cookies": "^1.8.1",
