--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run dev.grp && npm run dev.aiku-public && npm run dev.public && npm run dev.customer",
+        "dev": "npm run dev.grp && npm run dev.aiku-public && npm run dev.iris && npm run dev.customer",
         "build": "npm run build.grp && npm run build.aiku-public && npm run build.public && npm run build.customer",
         "dev.grp": "vite --config vite.grp.config.js",
         "build.grp": "vite build --config vite.grp.config.js && vite build --config vite.grp.config.js --ssr",
         "dev.aiku-public": "vite --config vite.aiku-public.config.js",
         "build.aiku-public": "vite build --config vite.aiku-public.config.js && vite build --config vite.aiku-public.config.js --ssr",
-        "dev.public": "vite --config vite.public.config.js",
-        "build.public": "vite build --config vite.public.config.js && vite build --config vite.public.config.js --ssr",
+        "dev.iris": "vite --config vite.iris.config.js",
+        "build.iris": "vite build --config vite.iris.config.js && vite build --config vite.iris.config.js --ssr",
         "dev.customer": "vite --config vite.customer.config.js",
         "build.customer": "vite build --config vite.customer.config.js && vite build --config vite.customer.config.js --ssr",
         "test": "cypress open"
