--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "npm run dev.grp && npm run dev.aiku-public && npm run dev.iris && npm run dev.customer",
-        "build": "npm run build.grp && npm run build.aiku-public && npm run build.public && npm run build.customer",
+        "build": "npm run build.grp && npm run build.aiku-public && npm run build.iris && npm run build.customer",
         "dev.grp": "vite --config vite.grp.config.js",
         "build.grp": "vite build --config vite.grp.config.js && vite build --config vite.grp.config.js --ssr",
         "dev.aiku-public": "vite --config vite.aiku-public.config.js",
