--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run dev.grp && npm run dev.aiku-public && npm run dev.iris && npm run dev.customer",
-        "build": "npm run build.grp && npm run build.aiku-public && npm run build.iris && npm run build.customer",
+        "dev": "npm run dev.grp && npm run dev.aiku-public && npm run dev.iris && npm run dev.retina",
+        "build": "npm run build.grp && npm run build.aiku-public && npm run build.iris && npm run build.retina",
         "dev.grp": "vite --config vite.grp.config.js",
         "build.grp": "vite build --config vite.grp.config.js && vite build --config vite.grp.config.js --ssr",
         "dev.aiku-public": "vite --config vite.aiku-public.config.js",
         "build.aiku-public": "vite build --config vite.aiku-public.config.js && vite build --config vite.aiku-public.config.js --ssr",
         "dev.iris": "vite --config vite.iris.config.js",
         "build.iris": "vite build --config vite.iris.config.js && vite build --config vite.iris.config.js --ssr",
-        "dev.customer": "vite --config vite.customer.config.js",
-        "build.customer": "vite build --config vite.customer.config.js && vite build --config vite.customer.config.js --ssr",
+        "dev.retina": "vite --config vite.retina.config.js",
+        "build.retina": "vite build --config vite.retina.config.js && vite build --config vite.retina.config.js --ssr",
         "test": "cypress open"
     },
     "devDependencies": {
