feat: PKA-1396 Tiptap: setup

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
         "@tiptap/extension-character-count": "^2.0.3",
         "@tiptap/extension-list-item": "^2.0.3",
         "@tiptap/extension-placeholder": "^2.0.3",
+        "@tiptap/extension-subscript": "^2.2.3",
+        "@tiptap/extension-superscript": "^2.2.3",
+        "@tiptap/extension-text-align": "^2.2.3",
         "@tiptap/extension-underline": "^2.0.3",
         "@tiptap/pm": "^2.0.3",
         "@tiptap/starter-kit": "^2.0.3",
