--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
         "@revolist/vue3-datagrid": "^3.2.17",
         "@sentry/vue": "^7.84.0",
         "@tiptap/extension-character-count": "^2.0.3",
+        "@tiptap/extension-color": "^2.2.3",
+        "@tiptap/extension-highlight": "^2.2.3",
         "@tiptap/extension-list-item": "^2.0.3",
         "@tiptap/extension-placeholder": "^2.0.3",
         "@tiptap/extension-subscript": "^2.2.3",
         "@tiptap/extension-superscript": "^2.2.3",
         "@tiptap/extension-text-align": "^2.2.3",
+        "@tiptap/extension-text-style": "^2.2.3",
         "@tiptap/extension-underline": "^2.0.3",
         "@tiptap/pm": "^2.0.3",
         "@tiptap/starter-kit": "^2.0.3",
