--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "qs": "^6.11.1",
         "string-to-color": "^2.2.2",
         "swiper": "^11.0.5",
+        "tiptap-extension-font-size": "^1.2.0",
         "uuid": "^9.0.0",
         "v-calendar": "^3.0.3",
         "vue-chartjs": "^5.3.0",
