--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6",
         "jackwh/laravel-new-relic": "^1.0",
+        "jubaer/zoom-laravel": "^1.3",
         "laravel/framework": "^10",
         "laravel/horizon": "^5",
         "laravel/pulse": "^1.0@beta",
