feat: PKA-1484 Website Workshop: Menu setup

--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
         "@vuepic/vue-datepicker": "^5.1.1",
         "chart.js": "^4.4.1",
         "floating-vue": "^2.0.0-beta.24",
+        "grapesjs": "^0.21.9",
+        "grapesjs-blocks-basic": "^1.0.2",
+        "grapesjs-preset-webpage": "^1.0.3",
         "jsbarcode": "^3.11.6",
         "laravel-echo": "^1.15.3",
         "laravel-vue-i18n": "^2.2.2",
